refactor user/me controller, add it to api, fix minor variant bug
