# admin-api/src/main/java/ch/redmoon/unchain/controller/MeController.java
@@ -1,47 +1,0 @@
-/*
-   Copyright 2026 Philipp Walther
-
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
-*/
-
-package ch.redmoon.unchain.controller;
-
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.oauth2.core.oidc.user.OidcUser;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-import java.util.Map;
-import java.util.stream.Collectors;
-import org.springframework.security.core.GrantedAuthority;
-
-@RestController
-public class MeController {
-
-    @GetMapping("/api/me")
-    public Map<String, Object> me(@AuthenticationPrincipal OidcUser principal) {
-        if (principal == null) {
-            return Map.of("authenticated", false);
-        }
-        return Map.of(
-                "authenticated", true,
-                "name", principal.getFullName(),
-                "email", principal.getEmail(),
-                "username",
-                principal.getPreferredUsername() != null ? principal.getPreferredUsername() : principal.getSubject(),
-                "picture", principal.getPicture() != null ? principal.getPicture() : "",
-                "authorities", principal.getAuthorities().stream()
-                        .map(GrantedAuthority::getAuthority)
-                        .collect(Collectors.toList()));
-    }
-}
